--- a/css/variables.css
+++ b/css/variables.css
@@ -9,7 +9,7 @@
   /* Z-index scale */
   --z-loader: 9999;
   --z-navbar: 1000;
-  --z-dropdown: 900;
+  --z-dropdown: 1005;
   --z-back-to-top: 800;
 
   /* Spacing */
